--- a/app/assets/stylesheets/site.scss
+++ b/app/assets/stylesheets/site.scss
@@ -51,6 +51,10 @@ h1 {
   padding-left: 1rem;
 }
 
+.documents-list .row .document-title-heading {
+  margin: 0px;
+}
+
 .title-metadata-container {
   overflow: auto;
 }
